// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeAction AccountEnabled is false should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-gFqAkR bkXCIc"
  >
    <button
      class="sc-gsFSXq jLgYJo sc-ikkxIA"
      data-testid="connect-btn"
      label="[object Object]"
      style="width: 100%;"
      type="button"
    >
       
      <h3
        class="sc-jlZhew bOWxgm"
      >
        Connect Wallet
      </h3>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BridgeAction AccountEnabled is true should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-gFqAkR bkXCIc"
  >
    <button
      class="sc-gsFSXq jLgYJo sc-ikkxIA"
      data-testid="bridge-btn"
      label="[object Object]"
      style="width: 100%;"
      type="button"
    >
       
      <h3
        class="sc-jlZhew bOWxgm"
      >
        Bridge
      </h3>
    </button>
  </div>
</DocumentFragment>
`;
